--- a/api_data_wrangling_mini_project.ipynb
+++ b/api_data_wrangling_mini_project.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unit 5 API Wrangling Mini Project - Sathwik Kesappragada"
+    "# Unit 7 API Wrangling Mini Project - Sathwik Kesappragada"
    ]
   },
   {
@@ -30,13 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Store the API key as a string - according to PEP8, constants are always named in all upper case\n",
     "#will remove when uploading code\n",
-    "API_KEY = 'UEPSDHmf7uc9Pxr-GMDV'"
+    "API_KEY = ''"
    ]
   },
   {
