Changes made, API KEY removed

--- a/api_data_wrangling_mini_project.ipynb
+++ b/api_data_wrangling_mini_project.ipynb
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "# Store the API key as a string - according to PEP8, constants are always named in all upper case\n",
-    "#will remove when uploading code\n",
+    "# will remove when uploading code\n",
     "API_KEY = ''"
    ]
   },
@@ -104,6 +104,7 @@
    "source": [
     "# Now, call the Quandl API and pull out a small sample of the data (only one day) to get a glimpse\n",
     "# into the JSON structure that will be returned\n",
+    "# sample links - searching for a format\n",
     "#https://www.quandl.com/api/v3/datatables/WIKI/PRICES?date=YYYY-MM-DD&ticker=AAPL&api_key=YOURKEY (for apple)\n",
     "#https://www.quandl.com/api/v3/datasets/WIKI/FB.json\n",
     "#https://www.quandl.com/api/v3/datasets/FSE/AFX_X.json?api_key=APIKEY\n",
@@ -175,6 +176,7 @@
    "source": [
     "# Inspect the JSON structure of the object you created, and take note of how nested it is,\n",
     "# as well as the overall structure\n",
+    "#obj formatted to json str\n",
     "print(json.dumps(req.json(), indent = 1))"
    ]
   },
@@ -201,6 +203,7 @@
     }
    ],
    "source": [
+    "#printing out the keys of the json_file\n",
     "req_dict = req.json()\n",
     "for key in req_dict['dataset_data']:\n",
     "    print(key)"
@@ -268,10 +271,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#changes the dates variable to observe 2017\n",
     "dates = 'start_date=2017-01-01&end_date=2017-12-31'\n",
     "mpurl = f'{url}{stock_code}/data.{data_type}?{dates}&api_key={API_KEY}'\n",
     "mp_req = requests.get(mpurl)\n",
-    "#mp_req.status_code == requests.codes.ok"
+    "mp_req.status_code == requests.codes.ok"
    ]
   },
   {
@@ -322,12 +326,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#making changes to json data structure for easier access\n",
+    "#extract every column except date, order by date dict of dicts\n",
     "col = mp_dict['dataset_data']['column_names'][1:]\n",
     "\n",
     "mp_data_list = sorted(mp_dict['dataset_data']['data'])\n",
-    "\n",
+    "#initializing empty dict\n",
     "mp_dict = {}\n",
-    "\n",
+    "#populating new dict with data from each data row\n",
     "for row in mp_data_list:\n",
     "    row_date = row[0]\n",
     "    mp_dict[row_date] = collections.OrderedDict(zip(col, row[1:]))"
@@ -347,6 +353,7 @@
     }
    ],
    "source": [
+    "#checking to see how the new dictionary looks\n",
     "print(mp_dict['2017-08-08'])"
    ]
   },
@@ -363,9 +370,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#retrieves all opening day prices and stores in list\n",
     "opening_day_prices = [(mp_dict[day]['Open']) \n",
     "                      for day in mp_dict if (mp_dict[day]['Open'] != None)]\n",
+    "#max opening day\n",
     "highest_open = max(opening_day_prices)\n",
+    "#min opening day\n",
     "lowest_open = min(opening_day_prices)"
    ]
   },
@@ -409,6 +419,7 @@
     }
    ],
    "source": [
+    "#retrieves the difference between High and Low and stores in a list\n",
     "changes_per_day = [(mp_dict[day]['High'] - mp_dict[day]['Low']) \n",
     "                   for day in mp_dict if(mp_dict[day]['High'] != None and mp_dict[day]['Low'] != None)]\n",
     "\n",
@@ -436,15 +447,18 @@
     }
    ],
    "source": [
+    "#retrieves and stores all closing prices into a list\n",
     "closing_price_per_day = [mp_dict[day]['Close'] \n",
     "                         for day in mp_dict \n",
     "                         if (mp_dict[day]['Close'] != None)]\n",
     "\n",
+    "#can only access previous days data so we will compare today with yesterday\n",
     "yest_price = closing_price_per_day.pop(0)\n",
-    "\n",
+    "#initializing variable, setting equal 0, changes in for loop\n",
     "largest_change = 0\n",
     "\n",
     "for price in closing_price_per_day:\n",
+    "    #closing price changes between today and yesterday\n",
     "    change = round(abs(price - yest_price),3)\n",
     "    largest_change=max(change, largest_change)\n",
     "    yest_price = price\n",
@@ -473,10 +487,13 @@
     }
    ],
    "source": [
+    "#retrieves trading volume and stores into a list\n",
     "daily_trading_volume = [mp_dict[day]['Traded Volume']\n",
     "                       for day in mp_dict\n",
     "                       if (mp_dict[day]['Traded Volume'] != None)]\n",
+    "#number of days for denominator\n",
     "days = len(daily_trading_volume)\n",
+    "#gets average\n",
     "avg_trading_volume = round(sum(daily_trading_volume)/days, 1)\n",
     "print(\"The average daily trading volume during this year: \", avg_trading_volume)"
    ]
@@ -502,6 +519,7 @@
     }
    ],
    "source": [
+    "#checks for median in a list\n",
     "def calculate_median(values):\n",
     "    nums = sorted(values)\n",
     "    count = len(values)\n",
@@ -530,6 +548,7 @@
     }
    ],
    "source": [
+    "#statistics package making it easier to just call a method\n",
     "import statistics \n",
     "statistics.median(daily_trading_volume)"
    ]
