--- a/Unit4_LondonHousing_CaseStudy_Sathwik_Kesappragada.ipynb
+++ b/Unit4_LondonHousing_CaseStudy_Sathwik_Kesappragada.ipynb
@@ -7,7 +7,7 @@
     "id": "Tia3MP1SJpgj"
    },
    "source": [
-    "# Springboard Data Science Career Track Unit 4 Challenge - Tier 3 Complete\n",
+    "# Springboard Data Science Career Track Unit 4 Challenge - SATHWIK KESAPPRAGADA \n",
     "\n",
     "## Objectives\n",
     "Hey! Great job getting through those challenging DataCamp courses. You're learning a lot in a short span of time. \n",
@@ -3502,13 +3502,6 @@
     "\n",
     "I also wanted to observe which month, if not the same, has the highest\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
