Changes were made after taking a look at cs109 repo

--- a/Logistic_Regression_Advanced_Case_Study/Logistic-Regression-Advanced-Case-Study.ipynb
+++ b/Logistic_Regression_Advanced_Case_Study/Logistic-Regression-Advanced-Case-Study.ipynb
@@ -8,7 +8,7 @@
     "id": "xQEqe7OIHumQ"
    },
    "source": [
-    "# Springboard Logistic Regression Advanced Case Study - Sathwik Kesappragada\n",
+    "# Springboard Logistic Regression Advanced Case Study\n",
     "$$\n",
     "\\renewcommand{\\like}{{\\cal L}}\n",
     "\\renewcommand{\\loglike}{{\\ell}}\n",
@@ -18,7 +18,8 @@
     "\\renewcommand{\\Ex}[2]{E_{#1}[#2]}\n",
     "\\renewcommand{\\x}{{\\mathbf x}}\n",
     "\\renewcommand{\\v}[1]{{\\mathbf #1}}\n",
-    "$$\n"
+    "$$\n",
+    "# Sathwik Kesappragada"
    ]
   },
   {
@@ -360,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -371,7 +372,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9168\n",
       "0.9252\n"
      ]
     }
@@ -389,9 +389,6 @@
     "\n",
     "# Fit the model on the trainng data.\n",
     "clf.fit(Xlr, ylr)\n",
-    "\n",
-    "# accuracy score for the training data\n",
-    "print(accuracy_score(clf.predict(Xlr), ylr))\n",
     "\n",
     "# Print the accuracy from the testing data.\n",
     "print(accuracy_score(clf.predict(Xtestlr), ytestlr))"
@@ -512,34 +509,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "mMNeNc4rHumz"
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C with the highest average score is:  0.1\n"
+      "0.1 with the highest average cv_score: 0.9172\n"
      ]
     }
    ],
    "source": [
     "#the grid of parameters to search over\n",
     "Cs = [0.001, 0.1, 1, 10, 100]\n",
-    "#initiate an array to store all scores\n",
-    "scores = []\n",
-    "# iterating through Cs \n",
+    "#initiazing a variable to store our max_score\n",
+    "max_score=0\n",
+    "# iterating through C\n",
     "for C in Cs:\n",
-    "    clf = LogisticRegression(solver = 'lbfgs')\n",
-    "    clf.C = C\n",
-    "    scores.append(cv_score(clf,Xlr,ylr))\n",
-    "# identifies the highest average score\n",
-    "best_score = Cs[scores.index(max(scores))]\n",
-    "print(\"C with the highest average score is: \", best_score)"
+    "    clf = LogisticRegression(C=C)\n",
+    "    score = cv_score(clf, Xlr, ylr)\n",
+    "    # identifies the highest average score \n",
+    "    if score > max_score:\n",
+    "        max_score = score\n",
+    "        best_C = C\n",
+    "print(\"%s with the highest average cv_score: %s\" %  (best_C,max_score))"
    ]
   },
   {
@@ -569,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -586,12 +580,12 @@
    ],
    "source": [
     "# Using the best_score to C \n",
-    "clf = LogisticRegression(solver = 'lbfgs')\n",
-    "clf.C = best_score\n",
+    "clflr = LogisticRegression(C=best_C)\n",
     "#fits model on training data\n",
-    "clf.fit(Xlr,ylr)\n",
+    "clflr.fit(Xlr,ylr)\n",
+    "ypred = clflr.predict(Xtestlr)\n",
     "#accuracy score \n",
-    "print(accuracy_score(clf.predict(Xtestlr),ytestlr))"
+    "print(accuracy_score(ypred,ytestlr))"
    ]
   },
   {
@@ -640,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -660,7 +654,7 @@
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "# logistic regression estimator\n",
-    "clf = LogisticRegression(solver = 'lbfgs')\n",
+    "clf = LogisticRegression(C=best_C)\n",
     "params = {'C': [0.001, 0.1, 1, 10, 100]}\n",
     "clf_grid = GridSearchCV(clf, param_grid = params)\n",
     "clf_grid.fit(Xlr, ylr)\n",
@@ -670,7 +664,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9252"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf2 = LogisticRegression(C=fitmodel.best_params_['C'])\n",
+    "clf2.fit(Xlr,ylr)\n",
+    "ypred2 = clf2.predict(Xtestlr)\n",
+    "accuracy_score(ypred2,ytestlr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -685,12 +702,117 @@
    ],
    "source": [
     "# using the scoring method \n",
-    "clf = LogisticRegression(solver ='lbfgs')\n",
+    "clfm = LogisticRegression(C=best_C)\n",
     "params = {'C': [0.001, 0.1, 1, 10, 100]}\n",
-    "clf_grid = GridSearchCV(clf, param_grid = params, scoring = cv_score)\n",
-    "clf_grid.fit(Xlr,ylr)\n",
-    "print(\"C with cv_score as scoring method: %s\" % clf_grid.best_params_[\"C\"])\n",
-    "print(\"Accuracy from C = %s: %s \\n\" % (clf_grid.best_params_[\"C\"], accuracy_score(clf_grid.predict(Xtestlr), ytestlr)))"
+    "clfm_grid = GridSearchCV(clfm, param_grid = params, scoring = 'accuracy')\n",
+    "clfm_grid.fit(Xlr,ylr)\n",
+    "print(\"C with cv_score as scoring method: %s\" % clfm_grid.best_params_[\"C\"])\n",
+    "print(\"Accuracy from C = %s: %s \\n\" % (clfm_grid.best_params_[\"C\"], accuracy_score(clfm_grid.predict(Xtestlr), ytestlr)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean_test_score</th>\n",
+       "      <th>std_test_score</th>\n",
+       "      <th>params</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.912000</td>\n",
+       "      <td>0.004195</td>\n",
+       "      <td>{'C': 0.001}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.916667</td>\n",
+       "      <td>0.002599</td>\n",
+       "      <td>{'C': 0.1}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.916800</td>\n",
+       "      <td>0.002509</td>\n",
+       "      <td>{'C': 1}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.916800</td>\n",
+       "      <td>0.002509</td>\n",
+       "      <td>{'C': 10}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.916800</td>\n",
+       "      <td>0.002509</td>\n",
+       "      <td>{'C': 100}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   mean_test_score  std_test_score        params\n",
+       "0         0.912000        0.004195  {'C': 0.001}\n",
+       "1         0.916667        0.002599    {'C': 0.1}\n",
+       "2         0.916800        0.002509      {'C': 1}\n",
+       "3         0.916800        0.002509     {'C': 10}\n",
+       "4         0.916800        0.002509    {'C': 100}"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = pd.DataFrame(clfm_grid.cv_results_)\n",
+    "results[['mean_test_score', 'std_test_score', 'params']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9168"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clfm_grid.best_score_"
    ]
   },
   {
