adding euclidean distance case study

--- a/Logistic_Regression_Advanced_Case_Study/Logistic-Regression-Advanced-Case-Study.ipynb
+++ b/Logistic_Regression_Advanced_Case_Study/Logistic-Regression-Advanced-Case-Study.ipynb
@@ -655,7 +655,7 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "# logistic regression estimator\n",
     "clf = LogisticRegression(C=best_C)\n",
-    "params = {'C': [0.001, 0.1, 1, 10, 100]}\n",
+    "params = {'C': [.001, 0.1, 1, 10, 200]}\n",
     "clf_grid = GridSearchCV(clf, param_grid = params)\n",
     "clf_grid.fit(Xlr, ylr)\n",
     "print(\"C without scoring method: %s\" % clf_grid.best_params_[\"C\"])\n",
@@ -703,7 +703,7 @@
    "source": [
     "# using the scoring method \n",
     "clfm = LogisticRegression(C=best_C)\n",
-    "params = {'C': [0.001, 0.1, 1, 10, 100]}\n",
+    "params = {'C': [0.001, 0.1, 1, 10, 300]}\n",
     "clfm_grid = GridSearchCV(clfm, param_grid = params, scoring = 'accuracy')\n",
     "clfm_grid.fit(Xlr,ylr)\n",
     "print(\"C with cv_score as scoring method: %s\" % clfm_grid.best_params_[\"C\"])\n",
